--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <p>
     <ul>
         
-            <img src="Suits.jpg" alt="" height="200" width="150">
+            <img src="images/Suits.jpg" alt="" height="200" width="150">
             <p>
                 Gabriel Macht ve Patrick J. Adams'ın başrollerinde oynadığı USA Network kanalında yayımlanan televizyon dizisidir. 
             </p>
